--- a/src/Agent/appsettings.json
+++ b/src/Agent/appsettings.json
@@ -9,9 +9,9 @@
   },
   "AgentOptions": {
     "ServerIp": "127.0.0.1",
-    "ServerPort": 7227,
-    "Token": "asdf",
-    "ServiceName": "Local Debug Agent"
+    "ServerPort": 443,
+    "ServiceName": "Local Debug Agent",
+    "AgentIdFilePath": "agent.id"
   },
   "Urls": "https://*:45443"
 }
