--- a/src/Server/JMW.Agent.Server/ClientApp/package.json
+++ b/src/Server/JMW.Agent.Server/ClientApp/package.json
@@ -21,8 +21,8 @@
     "@angular/platform-server": "^18.2.13",
     "@angular/router": "^18.2.13",
     "bootstrap": "^5.2.3",
+    "@popperjs/core": "^2.11.8",
     "jquery": "^3.6.4",
-    "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
     "rxjs": "~7.8.1",
     "tslib": "^2.5.0",
